# cbsodatav4

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt  test.csv
cache/: 84916NED_allTables.csv
src/cbs-odatav4_kcvanderlinden/: cbs-odatav4.py
src/cbsodatav4_kcvanderlinden/: cbsodatav4.py
tests/: test_DataFrame.py  test_cbsConnect.py  test_fullDataset.py  test_getData.py  test_specificTable.py  test_tableLengthObservations.py  test_tableName.py  test_targetUrl.py
