[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cbsodatav4_kcvanderlinden"
version = "0.1.1"
authors = [
  { name="Karel van der Linden", email="kcvanderlinden@outlook.com" },
]
description = "Fetch data from CBS/Statline using Open Data API v4"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[dependencies]
dependencies = [
    "pandas ~=2.2.2",
    "requests ~=2.31.0",
    "urllib3 ~=2.2.1",
    "dask ~=2024.9.1",
    "dask-expr ~=1.1.15",
    "numpy ~=2.1.2",
]

[project.urls]
Homepage = "https://github.com/kcvanderlinden/cbs-odatav4"
Issues = "https://github.com/kcvanderlinden/cbs-odatav4/issues"